--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "start": "node server/nest start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
