--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "trener",
   "version": "1.0.0",
   "description": "trener app",
-  "main": "app.js",
+  "main": "server/src/main.ts",
   "devDependencies": {},
   "scripts": {
-    "start": "next start -p $PORT"
+    "start": "node server/src/main.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
