--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server/src/main.ts",
   "devDependencies": {},
   "scripts": {
-    "start": "node server/src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./server/src/main.ts"
   },
   "author": "",
   "license": "ISC",
