--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "engines": {
     "node": "16.x"
   },
+  "type": "module",
   "dependencies": {
     "cookie-parser": "1.4.6",
     "cookie-session": "2.0.0",
