--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nest start",
     "start:prod": "node server/src/main.ts",
     "start:dev": "NODE_ENV=dev npm run start",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "nest start --debug --watch"
   },
   "author": "",
   "license": "ISC",
